WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128057
JSC profiler's stub info profiling support should work again
https://bugs.webkit.org/show_bug.cgi?id=128057
Summary
JSC profiler's stub info profiling support should work again
Filip Pizlo
Reported
2014-02-01 19:11:06 PST
Patch forthcoming.
Attachments
the patch
(7.81 KB, patch)
2014-02-01 19:14 PST
,
Filip Pizlo
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-02-01 19:14:22 PST
Created
attachment 222898
[details]
the patch
WebKit Commit Bot
Comment 2
2014-02-01 19:17:54 PST
Attachment 222898
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/CodeBlock.h:978: The parameter name "exec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/profiler/ProfilerBytecodeSequence.cpp:52: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3
2014-02-01 19:20:05 PST
(In reply to
comment #2
)
>
Attachment 222898
[details]
did not pass style-queue: > > > ERROR: Source/JavaScriptCore/bytecode/CodeBlock.h:978: The parameter name "exec" adds no information, so it should be removed. [readability/parameter_name] [5]
Fixed.
> ERROR: Source/JavaScriptCore/profiler/ProfilerBytecodeSequence.cpp:52: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4]
Lol, whoa - that's totally wrong. 4 spaces is clearly the only correct choice here.
> Total errors found: 2 in 6 files > > > If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 4
2014-02-01 22:04:57 PST
Comment on
attachment 222898
[details]
the patch r=me
Filip Pizlo
Comment 5
2014-02-01 22:34:27 PST
Landed in
http://trac.webkit.org/changeset/163259
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug